# phoneshare

./: .gitignore  DROPBEAM_CODEX_PLAN.md  DROPBEAM_LOCALSEND_REDESIGN_PLAN.md  DROPBEAM_REBUILD_PLAN.md  DROPBEAM_REDESIGN_V2_PLAN.md  DROPBEAM_UI_PARITY_HANDOFF.md  DROPBEAM_USER_FLOWS.md  INSTALL.md  PROGRESS.md  README.md  node_modules  package.json  tsconfig.base.json
apps/desktop/: 2026-05-23-014112-dropbream-users-flows-md-is-the-file-and-there-a.txt  index.html  node_modules  package.json  tailwind.config.ts  vite.config.ts
apps/desktop/scripts/: diagnose-mac.sh  diagnose-windows.ps1
apps/desktop/src/: App.tsx  index.css  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: crypto.rs  diagnostics.rs  main.rs  mdns.rs  notify_shell.rs  pairing.rs  qr.rs  server.rs  shell_integration.rs  transfer.rs  usb_android.rs  usb_ios.rs  watcher.rs  web_server.rs
apps/iphone-web/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/iphone-web/public/: manifest.json  sw.js
apps/iphone-web/src/: App.tsx  index.css  main.tsx  styles.css  vite-env.d.ts
apps/mobile/: app.json  eas.json  metro.config.js  node_modules  package.json  tsconfig.json
apps/mobile/android/: build.gradle  gradle.properties  settings.gradle
apps/mobile/app/: _layout.tsx  connect.tsx  history.tsx  incoming.tsx  index.tsx  pin.tsx  receive.tsx  send.tsx  settings.tsx  (+1 more)
data/: state.json
docs/: ARCHITECTURE.md  IOS_SHARING.md  IPHONE_WEB.md  MVP_SLICE.md  PROTOCOL.md  SECURITY.md
scripts/: build-android.sh  build-ios.sh  build-windows.ps1  console-dump.mjs  diagnose-windows.ps1  install-windows-context-menu.ps1  screenshot.mjs  smoke-transfer.mjs
(+85 files in other folders)
