[package]
name = "dropbeam-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
axum = { version = "0.7", features = ["http1", "json", "ws"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
futures-util = "0.3"
hex = "0.4"
hostname = "0.4"
hkdf = "0.12"
mdns-sd = "0.11"
mime_guess = "2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
